Changed background to static image, updated meta tag to (hopefully) fix zoom issue on ios, updated site description and general styling

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 .header-txt {
   color: #E1C362;
   margin-block: 0px;
-  -webkit-text-stroke: 2px black;
+  -webkit-text-stroke: 1px black;
 }
 
 .App-footer {
@@ -225,7 +225,7 @@
   font-size: calc(10px + 1vmin);
 }
 
-.background-video {
+.background-img {
   position: fixed;
   top: 0;
   left: 0;
@@ -272,6 +272,7 @@
 
 .rules-modal {
   width: 80%;
+  top: 50%;
 }
 
 .rules-text {
@@ -302,6 +303,11 @@
   .modal-content {
     width: 20%;
   }
+
+  .rules-modal {
+    width: 80%
+  }
+
   .guess-results {
     margin-bottom: 1%;
   }
